toolchain/internal/core/analysis/testdata/errors/consts/typed_primitive_mismatch.vdl
// @expect: E201

enum Flag {
  On
}

const retries Flag = true
